--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,7 @@ spring:
       ddl-auto: validate
     properties:
       hibernate:
+        enable_lazy_load_no_trans: true
         format_sql: false
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
         jdbc:
