added CustomProperty property to UserService

--- a/localRun/.example_envrc
+++ b/localRun/.example_envrc
@@ -10,6 +10,7 @@ export MYSQL_DB_NAME=appDB
 export MYSQL_DB_ADMIN_USER=localDBUser
 export MYSQL_DB_ADMIN_PASSWORD=localDBPassword
 export ENVIRONMENT=local # require for local dev
+export ADMIN_GROUP=midas-IL2-admin
 
 # OPTIONAL
 # export CLASSIFICATION=  # Options: UNCLASS,CUI,SECRET,SCI.  defaults to UNCLASS when null
