Resolve "Add Security to OGSM"

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,6 +6,8 @@ custom:
   mattermosttoken: testToken
   mattermosturl: http://mattermost.foo
   localKeycloakUid: "abc-123-def"
+  gitLabUrl: "http://foo"
+  gitLabAccessToken: "bar"
 
 server:
   port: 5000
