Resolve "add tests for Gitlab4JClient"

--- a/src/test/resources/customPropertyTest.properties
+++ b/src/test/resources/customPropertyTest.properties
@@ -5,3 +5,5 @@ custom.caveat=${CAVEAT:IL2}
 custom.mattermosttoken=testToken
 custom.mattermosturl=http://mattermost.foo
 custom.localKeycloakUid="abc-123-def"
+custom.gitLabUrl="http://foo.bar"
+custom.gitLabAccessToken="ab23f"
