Resolve "Add support for multiple gitlab connections"

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -30,7 +30,7 @@ spring:
   jpa:
     properties:
       hibernate:
-        dialect:
+        dialect: org.hibernate.dialect.H2Dialect
     hibernate:
       hbm2ddl:
         auto: create-drop
