--- a/src/test/resources/customPropertyTest.properties
+++ b/src/test/resources/customPropertyTest.properties
@@ -7,3 +7,5 @@ custom.mattermosturl=http://mattermost.foo
 custom.localKeycloakUid="abc-123-def"
 custom.gitLabUrl="http://foo.bar"
 custom.gitLabAccessToken="ab23f"
+custom.jwtAdminGroup=secret-key-12345
+custom.randomString=secret-key-12345
