--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ custom:
   jwtAdminGroup: ${ADMIN_GROUP:midas-IL2-admin}
   gitLabUrl: ${GITLAB_API_URL:NONE}
   gitLabAccessToken: ${GITLAB_ACCESS_TOKEN:NONE}
+  randomString: ${RANDOM_STRING:NONE}
 
 server:
   port: 8000
@@ -28,11 +29,12 @@ spring:
       hibernate:
         enable_lazy_load_no_trans: true
         format_sql: false
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+
         jdbc:
           time_zone: "UTC"
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
+    dialect: org.hibernate.dialect.MySQL8InnoDBDialect
     url: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DB_NAME}
     username: ${MYSQL_DB_ADMIN_USER}
     password: ${MYSQL_DB_ADMIN_PASSWORD}
