--- a/src/test/resources/customPropertyTest.properties
+++ b/src/test/resources/customPropertyTest.properties
@@ -10,3 +10,4 @@ custom.gitLabAccessToken="ab23f"
 custom.jwtAdminGroup=secret-key-12345
 custom.key=secret-key-12345
 custom.salt="this-is-my-salt"
+custom.allowedOrigin="*localhost*"
