fix tests from fortify update

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,9 +21,9 @@ logging:
   level:
     org:
       springframework:
-        security: INFO
-        web: INFO
-    root: INFO
+        security: WARN
+        web: WARN
+    root: WARN
 
 spring:
   jpa:
