--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.5.2'
+    id 'org.springframework.boot' version '2.5.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'org.flywaydb.flyway' version '7.9.2'
@@ -42,26 +42,26 @@ sourceSets {
 }
 
 dependencies {
-    antlr 'org.antlr:antlr4:4.9.1'
+    antlr 'org.antlr:antlr4:4.9.2'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.security:spring-security-messaging'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.hibernate:hibernate-validator:7.0.0.Final'
+    implementation 'org.hibernate:hibernate-validator:7.0.1.Final'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
-    implementation 'org.flywaydb:flyway-core'
-    implementation 'com.auth0:java-jwt:3.12.1'
-    implementation 'org.gitlab4j:gitlab4j-api:4.15.7'
-    compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'org.flywaydb:flyway-core:7.11.2'
+    implementation 'com.auth0:java-jwt:3.18.1'
+    implementation 'org.gitlab4j:gitlab4j-api:4.17.0'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    runtimeOnly 'mysql:mysql-connector-java:8.0.25'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'com.h2database:h2:1.4.199'
+    testImplementation 'com.h2database:h2:1.4.200'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.security:spring-security-test:5.5.1'
 
 }
 
