--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'org.flywaydb:flyway-core:8.0.0'
     implementation 'com.auth0:java-jwt:3.18.2'
     implementation 'org.gitlab4j:gitlab4j-api:4.18.0'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.91'
     compileOnly 'org.projectlombok:lombok:1.18.22'
     runtimeOnly 'mysql:mysql-connector-java:8.0.26'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.5.5'
@@ -113,6 +114,9 @@ jacocoTestReport {
 configurations.all {
     resolutionStrategy.dependencySubstitution {
         substitute module("com.ibm.icu:icu4j") with module("com.ibm.icu:icu4j:69.1")
+        substitute module("org.apache.tomcat.embed:tomcat-embed-core") with module("org.apache.tomcat.embed:tomcat-embed-core:9.0.54")
+        substitute module("org.apache.tomcat.embed:tomcat-embed-core") with module("org.apache.tomcat.embed:tomcat-embed-el:9.0.54")
+        substitute module("org.apache.tomcat.embed:tomcat-embed-core") with module("org.apache.tomcat.embed:tomcat-embed-websocket:9.0.54")
     }
 }
 
