--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,13 @@ custom:
   allowedOrigin: ${ALLOWED_ORIGIN:*dso.mil}
   dbName: ${MYSQL_DB_NAME}
 
+s3:
+  minioAccessKey: ${MINIO_ACCESS_KEY}
+  minioSecretKey: ${MINIO_SECRET_KEY}
+  minioHost: ${MINIO_HOST}
+  minioBucketName: ${MINIO_BUCKET_NAME}
+  awsDefaultRegion: ${AWS_DEFAULT_REGION}
+
 
 server:
   port: 8000
