--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -18,6 +18,8 @@ logging:
     org.springframework.security: DEBUG
 
 spring:
+  main:
+    allow-circular-references: true
   profiles:
     active: test
   datasource:
