--- a/src/test/resources/customPropertyTest.properties
+++ b/src/test/resources/customPropertyTest.properties
@@ -6,4 +6,4 @@ custom.jwtAdminGroup=secret-key-12345
 custom.key=secret-key-12345
 custom.salt="this-is-my-salt"
 custom.allowedOrigin="*localhost*"
-custom.dbName="appDB"
+custom.dbName="midas_db"
