--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.1'
+    id 'org.springframework.boot' version '2.6.2'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id 'org.flywaydb.flyway' version '8.0.0'
+    id 'org.flywaydb.flyway' version '8.3.0'
     id 'antlr'
     id 'checkstyle'
     id 'jacoco'
@@ -49,10 +49,11 @@ dependencies {
     implementation 'org.springframework.security:spring-security-messaging'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.hibernate:hibernate-validator:7.0.1.Final'
-    implementation 'org.flywaydb:flyway-core:8.0.2'
+    implementation 'org.flywaydb:flyway-core:8.3.0'
+    implementation 'org.flywaydb:flyway-mysql:8.3.0'
     implementation 'com.auth0:java-jwt:3.18.2'
     implementation 'org.gitlab4j:gitlab4j-api:4.18.0'
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.111'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.122'
     compileOnly 'org.projectlombok:lombok:1.18.22'
     runtimeOnly 'mysql:mysql-connector-java:8.0.26'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -62,14 +63,6 @@ dependencies {
     testImplementation 'com.h2database:h2:1.4.200'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
-}
-
-configurations.all {
-    resolutionStrategy.dependencySubstitution {
-        substitute(module("com.ibm.icu:icu4j")).using(module("com.ibm.icu:icu4j:69.1"))
-        substitute(module("org.apache.logging.log4j:log4j-api")).using(module("org.apache.logging.log4j:log4j-api:2.17.0"))
-        substitute(module("org.apache.logging.log4j:log4j-to-slf4j")).using(module("org.apache.logging.log4j:log4j-to-slf4j:2.17.0"))
-    }
 }
 
 generateGrammarSource {
