--- a/localRun/docker-compose.yml
+++ b/localRun/docker-compose.yml
@@ -3,12 +3,12 @@ version: '3.7'
 services:
   db:
     platform: linux/x86_64
-    image: mysql:8.0.21
+    image: mysql:8.0.27
     command: --default-authentication-plugin=mysql_native_password --log-bin-trust-function-creators
     restart: unless-stopped
     container_name: app-db
     environment:
-      MYSQL_DATABASE: appDB
+      MYSQL_DATABASE: midas_db
       MYSQL_USER: localDBUser
       MYSQL_PASSWORD: localDBPassword
       MYSQL_ROOT_PASSWORD: password
