--- a/localRun/experimental/docker-compose.yml
+++ b/localRun/experimental/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   db:
     platform: linux/x86_64
-    image: mysql:8.0.21
+    image: mysql:8.0.27
     restart: unless-stopped
     container_name: app-db
     ports:
@@ -34,3 +34,38 @@ services:
     container_name: app-db-adminer
     ports:
       - 8181:8080
+
+
+  minio:
+    container_name: minio
+    image: minio/minio
+    restart: always
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_REGION_NAME: us-gov-west-1
+      MINIO_ROOT_USER: minio123
+      MINIO_ROOT_PASSWORD: minio123
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - "minio_data:/data"
+
+  createbuckets:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc config host add myminio http://minio:9000 minio123 minio123;
+      /usr/bin/mc mb -p myminio/midas;
+      exit 0;
+      "
+
+volumes:
+  minio_data:
