--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,13 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 }
 
+configurations.all {
+    resolutionStrategy.dependencySubstitution {
+        substitute(module('org.apache.logging.log4j:log4j-api')).using(module('org.apache.logging.log4j:log4j-api:2.17.1'))
+        substitute(module('org.apache.logging.log4j:log4j-to-slf4j')).using(module('org.apache.logging.log4j:log4j-to-slf4j:2.17.1'))
+    }
+}
+
 generateGrammarSource {
     arguments += ['-visitor', '-no-listener','-package', 'mil.af.abms.midas.api.search']
 
