--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'antlr'
     id 'checkstyle'
     id 'jacoco'
+    id "com.gorylenko.gradle-git-properties" version "2.3.2"
 }
 
 group = 'mil.af.abms'
