--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,11 @@ s3:
   minioBucketName: ${MINIO_BUCKET_NAME}
   awsDefaultRegion: ${AWS_DEFAULT_REGION}
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: scheduledtasks, flyway, info, health
 
 server:
   port: 8000
