--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'com.h2database:h2:2.1.210'
+    testImplementation 'com.h2database:h2:1.4.200'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
@@ -70,6 +70,7 @@ configurations.all {
     resolutionStrategy.dependencySubstitution {
         substitute(module('org.apache.logging.log4j:log4j-api')).using(module('org.apache.logging.log4j:log4j-api:2.17.1'))
         substitute(module('org.apache.logging.log4j:log4j-to-slf4j')).using(module('org.apache.logging.log4j:log4j-to-slf4j:2.17.1'))
+        substitute(module('org.apache.tomcat.embed:tomcat-embed-core')).using(module('org.apache.tomcat.embed:tomcat-embed-core:9.0.58'))
     }
 }
 
