--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,7 +60,7 @@ spring:
     password: ${MYSQL_DB_ADMIN_PASSWORD}
 
   flyway:
-    failed-last-migration: false
+    failed-last-migration: true
   servlet:
     multipart:
       enabled: true
