--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.3'
+    id 'org.springframework.boot' version '2.6.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'org.flywaydb.flyway' version '8.3.0'
@@ -71,6 +71,7 @@ configurations.all {
         substitute(module('org.apache.logging.log4j:log4j-api')).using(module('org.apache.logging.log4j:log4j-api:2.17.1'))
         substitute(module('org.apache.logging.log4j:log4j-to-slf4j')).using(module('org.apache.logging.log4j:log4j-to-slf4j:2.17.1'))
         substitute(module('org.apache.tomcat.embed:tomcat-embed-core')).using(module('org.apache.tomcat.embed:tomcat-embed-core:9.0.58'))
+        substitute(module('com.fasterxml.jackson.core:jackson-databind')).using(module('com.fasterxml.jackson.core:jackson-databind:2.13.2'))
     }
 }
 
