--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,18 @@ plugins {
     id 'checkstyle'
     id 'jacoco'
     id "com.gorylenko.gradle-git-properties" version "2.3.2"
+    id "org.sonarqube" version "3.3"
 }
+
+apply from: "sonar.gradle"
 
 group = 'mil.af.abms'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+
+wrapper {
+    gradleVersion = "7.4.2"
+}
 
 configurations {
     compileOnly {
