--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.9'
+    id 'org.springframework.boot' version '2.6.12'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'org.flywaydb.flyway' version '8.5.13'
@@ -53,6 +53,7 @@ sourceSets {
 
 dependencies {
     antlr 'org.antlr:antlr4:4.9.3'
+    implementation 'org.yaml:snakeyaml:1.33'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
