--- a/build.gradle
+++ b/build.gradle
@@ -81,7 +81,7 @@ configurations.all {
     resolutionStrategy.dependencySubstitution {
         substitute(module('org.apache.logging.log4j:log4j-api')).using(module('org.apache.logging.log4j:log4j-api:2.18.0'))
         substitute(module('org.apache.logging.log4j:log4j-to-slf4j')).using(module('org.apache.logging.log4j:log4j-to-slf4j:2.18.0'))
-        substitute(module('com.fasterxml.jackson.core:jackson-databind')).using(module('com.fasterxml.jackson.core:jackson-databind:2.13.2.1'))
+        substitute(module('com.fasterxml.jackson.core:jackson-databind')).using(module('com.fasterxml.jackson.core:jackson-databind:2.14.0-rc1'))
     }
 }
 
