--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,10 @@ dependencies {
     implementation 'org.springframework.security:spring-security-messaging'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-core:5.7.5'
+    implementation 'org.springframework.security:spring-security-crypto:5.7.5'
+    implementation 'org.springframework.security:spring-security-web:5.7.5'
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.68'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-websocket:9.0.68'
     implementation 'org.hibernate:hibernate-validator:7.0.2.Final'
     implementation 'org.flywaydb:flyway-core:8.5.13'
     implementation 'org.flywaydb:flyway-mysql:8.5.13'
