Consolidate spring security deps

--- a/build.gradle
+++ b/build.gradle
@@ -59,9 +59,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.security:spring-security-messaging'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.security:spring-security-core:5.7.5'
-    implementation 'org.springframework.security:spring-security-crypto:5.7.5'
-    implementation 'org.springframework.security:spring-security-web:5.7.5'
+    implementation 'org.springframework.security:spring-security:5.7.5'
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.68'
     implementation 'org.apache.tomcat.embed:tomcat-embed-websocket:9.0.68'
     implementation 'org.hibernate:hibernate-validator:7.0.2.Final'
